# python-sandbox

./: .gitignore  example.db  main.py  pyproject.toml
argos/: Russian_Google_Argos.txt  test_argos.py
instance/: example.db
mongita/: hello_mongita.py
mongita/mongita_data/sample_db.books/: $.file_attrs  $.metadata
mongita_data/: $.metadata
mongita_data/sample_db/: $.metadata
mongita_data/sample_db.books/: $.data
parsing/: split_paragraphs.py
parsing chapter/: chapter_one.txt  split_paragraphs_awk.txt
sqlite/: demo.sqlite3  demo_sqlite.py
